<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">跟我学</string>
    <string name="action_settings">Settings</string>
    <string name="mian_homepage">首页</string>
    <string name="mian_course">课程</string>
    <string name="mian_find">发现</string>
    <string name="main_person">我的</string>
    <string name="mian_city">主页</string>
    <string name="main_search">搜科目…</string>
    <string name="login_title">账户密码登录</string>
    <string name="Login_account">手机号码/邮箱地址</string>
    <string name="login_pwd">请输入密码</string>
    <string name="login_btn">登录</string>
    <string name="personal_order">订单</string>
    <string name="personal_info">个人资料</string>
    <string name="info_name">用户昵称</string>
    <string name="info_img">用户头像</string>
    <string name="info_phone">手机号码</string>
    <string name="info_tutorname">昵称</string>
    <string name="info_sex">性别</string>
    <string name="info_pwd">密码</string>
    <string name="info_loc">地址</string>
    <string name="info_teachAge">教龄</string>
    <string name="info_birth">出生日期</string>
    <string name="info_address">家庭地址</string>
    <string name="info_updatepwd">修改密码</string>
    <string name="personal_course">我的课程</string>
    <string name="personal_love">我的关注</string>
    <string name="personal_stage">学习阶段</string>
    <string name="personal_for">我的收藏</string>
    <string name="personal_pingjia">评价管理</string>
    <string name="course_favorite">收藏</string>
    <string name="course_bug">购买</string>
    <string name="course_inquiry">咨询</string>

    <string-array name="ctype">
        <item>幼小</item>
        <item>初中</item>
        <item>高中</item>
        <item>艺术</item>
        <item>生活</item>
        <item>职业</item>
        <item>语言</item>
        <item>其他</item>
    </string-array>
    <string-array name="sex_type">
        <item>保密</item>
        <item>男</item>
        <item>女</item>
    </string-array>
    <string-array name="testList">
        <item>曾经怀着虔诚的心敬神礼佛。经历了凡尘的千重劫，看惯了神的无情，目睹了佛的冷漠。暗下誓言：永不入神族，誓不进佛界。脚踏神族、腿蹬佛界追寻人世仁道之境。</item>
        <item>腾讯网游连爆赌博内幕，一旦彻查。不知这些机构如何操作了</item>
        <item>美股暗藏杀机“华尔街之狼”疯狂押注股市崩盘</item>
        <item>万达院线前7月票房收入7.17亿元 同比增长逾三成</item>
        <item>神奇的1285亿年再现 年内第五次地量有何显示</item>
    </string-array>
    <string-array name="time">
        <item>14:31</item>
        <item>14:30</item>
        <item>14:20</item>
        <item>14:15</item>
        <item>14:05</item>
    </string-array>
    <string-array name="countries">
        <item>A曾经怀着虔诚的心敬神礼佛。经历了凡尘的千重劫，看惯了神的无情，目睹了佛的冷漠。暗下誓言：永不入神族，誓不进佛界。脚踏神族、腿蹬佛界追寻人世仁道之境。</item>
        <item>A腾讯网游连爆赌博内幕，一旦彻查。不知这些机构如何操作了</item>
        <item>A美股暗藏杀机“华尔街之狼”疯狂押注股市崩盘</item>
        <item>A万达院线前7月票房收入7.17亿元 同比增长逾三成</item>
        <item>A神奇的1285亿年再现 年内第五次地量有何显示</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Burkina Faso</item>
        <item>Burma</item>
        <item>Burundi</item>
    </string-array>

</resources>