<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:background="@color/white"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/id_tab_homepage"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/id_tab_weixin_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:clickable="false"
            android:src="@drawable/tab_weixin_pressed" />

        <TextView
            android:id="@+id/id_tab_weixin_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mian_homepage"
            android:textColor="@color/orange" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_tab_course"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/id_tab_frd_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:clickable="false"
            android:src="@drawable/tab_find_frd_normal" />

        <TextView
            android:id="@+id/id_tab_frd_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mian_course"
            android:textColor="@color/gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_tab_find"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/id_tab_address_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:clickable="false"
            android:src="@drawable/tab_address_normal" />

        <TextView
            android:id="@+id/id_tab_address_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mian_find"
            android:textColor="@color/gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_tab_person"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/id_tab_settings_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:clickable="false"
            android:src="@drawable/tab_settings_normal" />

        <TextView
            android:id="@+id/id_tab_settings_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_person"
            android:textColor="@color/gray" />
    </LinearLayout>

</LinearLayout>