<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/personal_detail"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/orange" >

        <ImageButton
            android:id="@+id/personal_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="18dp"
            android:background="@drawable/icon_back" />

        <com.prtutor.android.view.HandyTextView
            android:id="@+id/personal_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/personal_info"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:background="@drawable/sharp_person"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/setting_info_name"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:background="@color/white"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:clickable="false"
                android:text="@string/info_name"
                android:textColor="@color/text_color"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="250dip"
                android:background="@drawable/btn_next_action"
                android:clickable="false" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#E2E2E2" />

        <LinearLayout
            android:id="@+id/setting_info_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/info_img"
                android:textColor="@color/text_color"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/info_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="150dip"
                android:src="@drawable/homeimg7" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#E2E2E2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:background="@drawable/sharp_person"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/setting_info_sex"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:background="@color/white"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/info_sex"
                android:textColor="@color/text_color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/setting_info_tv_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="220dip"
                android:hint="sex"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#E2E2E2" />

        <LinearLayout
            android:id="@+id/setting_info_address"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:background="@color/white"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/info_address"
                android:textColor="@color/text_color"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#E2E2E2" />

        <LinearLayout
            android:id="@+id/setting_info_pwd"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:background="@color/white"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/info_updatepwd"
                android:textColor="@color/text_color"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#E2E2E2" />
    </LinearLayout>

</LinearLayout>