<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/white"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/id_tab_collect"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/tab_collect_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:clickable="false"
            android:src="@drawable/tab_favorite_normal" />

        <com.prtutor.android.view.HandyTextView
            android:id="@+id/tv_course_collect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_favorite"
            android:textColor="@color/gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_tab_inquiry"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/tab_inquiry_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:clickable="false"
            android:src="@drawable/tab_inquiry_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_inquiry"
            android:textColor="@color/gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_tab_phone"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/tab_phone_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:clickable="false"
            android:src="@drawable/tab_phone_normal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_tab_buy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/orange"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tab_buy_tv_nums"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textColor="@color/white"
            android:text="0人报名" />

        <Button
            android:id="@+id/tab_buy_img"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:background="@color/orange"
            android:clickable="false"
            android:textSize="23dp"
            android:text="@string/course_bug" />
    </LinearLayout>

</LinearLayout>