<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_normal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_login"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/orange" >

        <ImageButton
            android:id="@+id/login_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="18dp"
            android:background="@drawable/icon_back" />

        <com.prtutor.android.view.HandyTextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="学生登录"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <LinearLayout style="@style/LoginMainLayoutStyle" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:background="@drawable/more_activity_item_selector_bottom_corners"
            android:orientation="horizontal"
            android:padding="10sp" >

            <EditText
                android:id="@+id/login_et_account"
                android:layout_width="wrap_content"
                android:layout_height="46dip"
                android:background="@null"
                android:ems="10"
                android:focusableInTouchMode="true"
                android:hint="@string/login_title"
                android:inputType="text"
                android:padding="5.0dip"
                android:singleLine="true"
                android:textColor="@color/gray"
                android:textSize="16.0sp" />
        </LinearLayout>

        <View style="@style/PersonalLine" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_margin="5dp"
            android:background="@drawable/more_activity_item_selector_bottom_corners"
            android:orientation="horizontal"
            android:padding="10sp" >

            <EditText
                android:id="@+id/login_et_pwd"
                android:layout_width="wrap_content"
                android:layout_height="46dip"
                android:background="@null"
                android:ems="10"
                android:hint="@string/login_pwd"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="5.0dip"
                android:singleLine="true"
                android:textColor="@color/gray"
                android:textSize="16.0sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:background="@drawable/btn_background"
        android:gravity="center"
        android:text="@string/login_btn"
        android:textColor="@color/profile_bottom_text_color"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/Register_accout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="20dp"
            android:text="注册新账号"
            android:textColor="#494949"
            android:textSize="16.0sp" />
    </RelativeLayout>

</RelativeLayout>